# echoviz

./: .gitignore  README.md  pyproject.toml  setup.py  test.ipynb
echoviz/: __init__.py
echoviz/threed/: __init__.py  animated.py  distance.py  interactive.py  static.py
echoviz/twod/: __init__.py  animated.py  slicing.py
echoviz/utils/: __init__.py  colors.py  layouts.py  misc.py  voxel_grid.py
src/threed/: __init__.py  animated.py  interactive.py  static.py
src/twod/: __init__.py  animated.py  slicing.py
src/utils/: __init__.py  voxel_grid.py
tests/: test.ipynb  test.py  test_utils.py
